[gd_scene load_steps=22 format=3 uid="uid://ch0nptrh6l6ab"]

[ext_resource type="FontFile" path="res://Demo/Assets/font.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://rekipk5xspb1" path="res://Demo/Scenes/World.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://isd3o7ji1m5j" path="res://Scenes/Track.tscn" id="3"]
[ext_resource type="Script" path="res://Demo/Scripts/Game.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://jvakchg2s8i4" path="res://Scenes/TrackSwitch.tscn" id="5"]
[ext_resource type="Theme" uid="uid://dhkt4uo1jjcia" path="res://Demo/Resources/UITheme.tres" id="6"]
[ext_resource type="FontFile" uid="uid://chnn7o53hp1wh" path="res://Demo/Assets/DePixelSchmal.ttf" id="7"]
[ext_resource type="PackedScene" uid="uid://dk4kss5yu35xs" path="res://Scenes/components/player_control_component.tscn" id="7_3fkc2"]
[ext_resource type="Texture2D" uid="uid://cirsea0damm3q" path="res://Demo/Assets/godot.png" id="8"]
[ext_resource type="PackedScene" uid="uid://c2qsc24ng38ir" path="res://Scenes/TrainEngine.tscn" id="9"]

[sub_resource type="Curve2D" id="1"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(-61.4994, -34.5681, 61.4994, 34.5681, 0, -64, -193.007, 0.46365, 193.007, -0.46365, 320, 0, 0, 0, 0, 0, 520, 0)
}
point_count = 3

[sub_resource type="Curve2D" id="4"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, -32.4262, 32.4024, 32.4262, -32.4024, 64, -32, 0, 0, 0, 0, 128, -96)
}
point_count = 3

[sub_resource type="Curve2D" id="5"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0)
}
point_count = 2

[sub_resource type="Curve2D" id="10"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -89, 163, -152.172, 152.172, 152.172, -152.172, 79, -5, 0, 0, 0, 0, 95, -317, 0, 0, 0, 0, -33, -277)
}
point_count = 4

[sub_resource type="Curve2D" id="11"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -24, 0, 0, 0, 0, 0, 168, 0)
}
point_count = 2

[sub_resource type="Curve2D" id="12"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(-248.275, 0, 248.275, 0, 0, 0, 0, 0, 0, 0, 312, 256)
}
point_count = 2

[sub_resource type="Curve2D" id="13"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, -117.731, 118.921, 117.731, -118.921, 120, -120, 0, 0, 0, 0, 168, -480, 0, 0, 0, 0, -264, -504)
}
point_count = 4

[sub_resource type="Curve2D" id="16"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 48, 168, 0, 0, 0, 0, 240, 392, 0, 0, 0, 0, 1456, 456)
}
point_count = 3

[sub_resource type="Curve2D" id="17"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 144, 0, 0, 0, 0, 256, -328, 0, 0, 0, 0, 704, -328)
}
point_count = 3

[sub_resource type="FontFile" id="14"]
fallbacks = Array[Font]([ExtResource("7")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="15"]
fallbacks = Array[Font]([ExtResource("7")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/8/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/8/0 = Vector2(0, 0)

[node name="Game" type="Node2D"]
script = ExtResource("4")

[node name="World" parent="." instance=ExtResource("2")]

[node name="Godot" type="Sprite2D" parent="World"]
position = Vector2(840, 328)
scale = Vector2(1.75, 1.75)
texture = ExtResource("8")

[node name="Tracks" type="Node2D" parent="."]

[node name="Track" parent="Tracks" instance=ExtResource("3")]
position = Vector2(-128, 512)
curve = SubResource("1")

[node name="TrackSwitch" parent="Tracks" instance=ExtResource("5")]
position = Vector2(392, 512)

[node name="LeftTrack" parent="Tracks/TrackSwitch" index="0"]
curve = SubResource("4")

[node name="HeadPoint" parent="Tracks/TrackSwitch/LeftTrack" index="0"]
rotation = -0.463648

[node name="TailPoint" parent="Tracks/TrackSwitch/LeftTrack" index="1"]
position = Vector2(128, -96)
rotation = -0.785398
progress = 163.628

[node name="TrackVisualComponent" parent="Tracks/TrackSwitch/LeftTrack" index="2"]
points = PackedVector2Array(0, 0, 1.42002, -0.0459953, 5.44007, -0.443412, 8.31259, -0.895513, 11.7001, -1.5814, 15.5576, -2.54971, 19.8402, -3.8491, 24.5027, -5.5282, 26.9624, -6.52535, 29.5002, -7.63566, 32.1105, -8.86523, 34.7877, -10.2201, 37.5261, -11.7064, 40.3202, -13.3302, 43.1642, -15.0976, 46.0527, -17.0146, 48.9798, -19.0874, 51.9401, -21.322, 54.9279, -23.7244, 57.9376, -26.3009, 60.9635, -29.0574, 64, -32, 67.0365, -35.0344, 70.0624, -38.0585, 73.0721, -41.0666, 76.0599, -44.053, 79.0202, -47.0122, 81.9473, -49.9385, 84.8358, -52.8262, 87.6798, -55.6698, 90.4739, -58.4635, 93.2123, -61.2017, 95.8895, -63.8789, 98.4998, -66.4893, 101.038, -69.0274, 103.497, -71.4874, 105.873, -73.8638, 108.16, -76.1509, 110.351, -78.3431, 112.442, -80.4347, 114.427, -82.4201, 116.3, -84.2936, 119.687, -87.6826, 122.56, -90.5566, 124.872, -92.8704, 126.58, -94.579, 128, -96)

[node name="Pointer" parent="Tracks/TrackSwitch/LeftTrack" index="3"]
position = Vector2(59.382, -27.5954)
rotation = -0.738077

[node name="RightTrack" parent="Tracks/TrackSwitch" index="1"]
curve = SubResource("5")

[node name="HeadPoint" parent="Tracks/TrackSwitch/RightTrack" index="0"]
rotation = 0.0

[node name="TailPoint" parent="Tracks/TrackSwitch/RightTrack" index="1"]
position = Vector2(128, 0)
rotation = 0.0
progress = 128.0

[node name="TrackVisualComponent" parent="Tracks/TrackSwitch/RightTrack" index="2"]
points = PackedVector2Array(0, 0, 1.4375, 0, 5.5, 0, 8.39844, 0, 11.8125, 0, 15.6953, 0, 20, 0, 24.6797, 0, 27.1455, 0, 29.6875, 0, 32.2998, 0, 34.9766, 0, 37.7119, 0, 40.5, 0, 43.335, 0, 46.2109, 0, 49.1221, 0, 52.0625, 0, 55.0264, 0, 58.0078, 0, 61.001, 0, 64, 0, 66.999, 0, 69.9922, 0, 72.9736, 0, 75.9375, 0, 78.8779, 0, 81.7891, 0, 84.665, 0, 87.5, 0, 90.2881, 0, 93.0234, 0, 95.7002, 0, 98.3125, 0, 100.854, 0, 103.32, 0, 108, 0, 112.305, 0, 116.188, 0, 119.602, 0, 122.5, 0, 126.562, 0, 128, 0)

[node name="Pointer" parent="Tracks/TrackSwitch/RightTrack" index="3"]
position = Vector2(66.7676, 0)
rotation = 0.0

[node name="Button" parent="Tracks/TrackSwitch" index="2"]
offset_top = -88.0
offset_bottom = -40.0

[node name="TrackSwitch2" parent="Tracks" instance=ExtResource("5")]
position = Vector2(712, 512)

[node name="LeftTrack" parent="Tracks/TrackSwitch2" index="0"]
curve = SubResource("4")

[node name="HeadPoint" parent="Tracks/TrackSwitch2/LeftTrack" index="0"]
rotation = -0.463648

[node name="TailPoint" parent="Tracks/TrackSwitch2/LeftTrack" index="1"]
position = Vector2(128, -96)
rotation = -0.785398
progress = 163.628

[node name="TrackVisualComponent" parent="Tracks/TrackSwitch2/LeftTrack" index="2"]
points = PackedVector2Array(0, 0, 1.42002, -0.0459953, 5.44007, -0.443412, 8.31259, -0.895513, 11.7001, -1.5814, 15.5576, -2.54971, 19.8402, -3.8491, 24.5027, -5.5282, 26.9624, -6.52535, 29.5002, -7.63566, 32.1105, -8.86523, 34.7877, -10.2201, 37.5261, -11.7064, 40.3202, -13.3302, 43.1642, -15.0976, 46.0527, -17.0146, 48.9798, -19.0874, 51.9401, -21.322, 54.9279, -23.7244, 57.9376, -26.3009, 60.9635, -29.0574, 64, -32, 67.0365, -35.0344, 70.0624, -38.0585, 73.0721, -41.0666, 76.0599, -44.053, 79.0202, -47.0122, 81.9473, -49.9385, 84.8358, -52.8262, 87.6798, -55.6698, 90.4739, -58.4635, 93.2123, -61.2017, 95.8895, -63.8789, 98.4998, -66.4893, 101.038, -69.0274, 103.497, -71.4874, 105.873, -73.8638, 108.16, -76.1509, 110.351, -78.3431, 112.442, -80.4347, 114.427, -82.4201, 116.3, -84.2936, 119.687, -87.6826, 122.56, -90.5566, 124.872, -92.8704, 126.58, -94.579, 128, -96)

[node name="Pointer" parent="Tracks/TrackSwitch2/LeftTrack" index="3"]
position = Vector2(59.382, -27.5954)
rotation = -0.738077

[node name="RightTrack" parent="Tracks/TrackSwitch2" index="1"]
curve = SubResource("5")

[node name="HeadPoint" parent="Tracks/TrackSwitch2/RightTrack" index="0"]
rotation = 0.0

[node name="TailPoint" parent="Tracks/TrackSwitch2/RightTrack" index="1"]
position = Vector2(128, 0)
rotation = 0.0
progress = 128.0

[node name="TrackVisualComponent" parent="Tracks/TrackSwitch2/RightTrack" index="2"]
points = PackedVector2Array(0, 0, 1.4375, 0, 5.5, 0, 8.39844, 0, 11.8125, 0, 15.6953, 0, 20, 0, 24.6797, 0, 27.1455, 0, 29.6875, 0, 32.2998, 0, 34.9766, 0, 37.7119, 0, 40.5, 0, 43.335, 0, 46.2109, 0, 49.1221, 0, 52.0625, 0, 55.0264, 0, 58.0078, 0, 61.001, 0, 64, 0, 66.999, 0, 69.9922, 0, 72.9736, 0, 75.9375, 0, 78.8779, 0, 81.7891, 0, 84.665, 0, 87.5, 0, 90.2881, 0, 93.0234, 0, 95.7002, 0, 98.3125, 0, 100.854, 0, 103.32, 0, 108, 0, 112.305, 0, 116.188, 0, 119.602, 0, 122.5, 0, 126.562, 0, 128, 0)

[node name="Pointer" parent="Tracks/TrackSwitch2/RightTrack" index="3"]
position = Vector2(66.7676, 0)
rotation = 0.0

[node name="Button" parent="Tracks/TrackSwitch2" index="2"]
offset_top = -88.0
offset_bottom = -40.0

[node name="Track2" parent="Tracks" instance=ExtResource("3")]
position = Vector2(609, 253)
curve = SubResource("10")

[node name="Track3" parent="Tracks" instance=ExtResource("3")]
position = Vector2(544, 512)
curve = SubResource("11")

[node name="Track4" parent="Tracks" instance=ExtResource("3")]
position = Vector2(840, 512)
curve = SubResource("12")

[node name="Track5" parent="Tracks" instance=ExtResource("3")]
position = Vector2(840, 416)
curve = SubResource("13")

[node name="Track6" parent="Tracks" instance=ExtResource("3")]
position = Vector2(-304, 312)
curve = SubResource("16")

[node name="TrackSwitch3" parent="Tracks" instance=ExtResource("5")]
position = Vector2(-128, 448)
rotation = -3.14159

[node name="TrackSwitch4" parent="Tracks" instance=ExtResource("5")]
position = Vector2(448, -56)

[node name="Track7" parent="Tracks" instance=ExtResource("3")]
position = Vector2(-256, 272)
curve = SubResource("17")

[node name="TrainEngine" parent="." instance=ExtResource("9")]
position = Vector2(-152, 504)

[node name="PlayerControlComponent" parent="TrainEngine" instance=ExtResource("7_3fkc2")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 24.0
offset_top = 60.0
offset_right = 280.0
offset_bottom = 79.0
theme = ExtResource("6")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1")
text = "Select a Track"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 17.2773
offset_top = 20.5315
offset_right = 334.277
offset_bottom = 58.5315
scale = Vector2(0.962034, 0.962034)
pivot_offset = Vector2(139, 14)
theme = ExtResource("6")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("14")
theme_override_font_sizes/font_size = 32
text = "2D Train Sim Demo"

[node name="Line2D" type="Line2D" parent="CanvasLayer"]
position = Vector2(87.072, 43.6001)
scale = Vector2(1.088, 0.399999)
points = PackedVector2Array(176, 96, -64, 96)
width = 5.0

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 12.0
offset_top = 32.0
offset_right = 52.0
offset_bottom = 72.0
theme = ExtResource("6")

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 89.0
offset_bottom = 84.0
text = "Track 1"

[node name="Button2" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 64.0
offset_right = 169.0
offset_bottom = 84.0
text = "Track 2"

[node name="Button3" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 192.0
offset_top = 64.0
offset_right = 249.0
offset_bottom = 84.0
text = "Track 3"

[node name="Button4" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 96.0
offset_right = 89.0
offset_bottom = 116.0
text = "Track 4"

[node name="Button5" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 96.0
offset_right = 169.0
offset_bottom = 116.0
text = "Track 5"

[node name="Button6" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 192.0
offset_top = 96.0
offset_right = 249.0
offset_bottom = 116.0
text = "Track 6"

[node name="ExitButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 128.0
offset_right = 88.0
offset_bottom = 148.0
text = "Exit"

[node name="Version" type="Button" parent="CanvasLayer"]
offset_left = -4.0
offset_top = 308.0
offset_right = 67.0
offset_bottom = 328.0
focus_mode = 0
theme_override_colors/font_color = Color(0.858824, 0.858824, 0.858824, 1)
theme_override_fonts/font = SubResource("15")
theme_override_font_sizes/font_size = 8
text = "Version 0.2.1"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 328)

[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Version" to="." method="_on_version_pressed"]

[editable path="Tracks/TrackSwitch"]
[editable path="Tracks/TrackSwitch/LeftTrack"]
[editable path="Tracks/TrackSwitch/RightTrack"]
[editable path="Tracks/TrackSwitch2"]
[editable path="Tracks/TrackSwitch2/LeftTrack"]
[editable path="Tracks/TrackSwitch2/RightTrack"]
